--- a/app/src/main/res/layout/item_point_history.xml
+++ b/app/src/main/res/layout/item_point_history.xml
@@ -10,8 +10,8 @@
 
     <LinearLayout
         style="@style/item.linear.horizontal"
-        android:paddingTop="@dimen/pd_xsmall"
-        android:paddingBottom="@dimen/pd_xsmall">
+        android:paddingBottom="@dimen/pd_xsmall"
+        android:paddingTop="@dimen/pd_xsmall">
 
         <LinearLayout
             style="@style/item.linear"
@@ -41,14 +41,14 @@
                 android:id="@+id/tvPoints"
                 style="@style/text.green"
                 android:drawablePadding="@dimen/pd_xxsmall"
-                android:textColor="@{viewModel.isRefilled() ? @color/greenText : @color/ag_red}" />
+                android:textColor="@color/greenText" />
 
             <TextView
                 android:id="@+id/tvPointsText"
                 style="@style/text.green"
                 android:drawablePadding="@dimen/pd_xxsmall"
                 android:text="@{@plurals/points_count(viewModel.points)}"
-                android:textColor="@{viewModel.isRefilled() ? @color/greenText : @color/ag_red}" />
+                android:textColor="@color/greenText" />
         </LinearLayout>
     </LinearLayout>
 </layout>
