--- a/app/src/main/res/layout/fragment_info_survey.xml
+++ b/app/src/main/res/layout/fragment_info_survey.xml
@@ -28,6 +28,7 @@
             android:visibility="visible" />
 
         <ScrollView
+            android:id="@+id/scrl"
             style="@style/root"
             android:layout_above="@+id/shareButton">
 
