--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,8 +9,13 @@
         android:visible="false"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_invite_friends"
-        android:icon="@drawable/mytopic"
-        android:title="@string/action_invite_friends"
-        app:showAsAction="always" />
+        android:id="@+id/action_test"
+        android:icon="@drawable/ic_test"
+        app:showAsAction="always"
+        android:visible="false" />
+    <!--<item-->
+    <!--android:id="@+id/action_invite_friends"-->
+    <!--android:icon="@drawable/mytopic"-->
+    <!--android:title="@string/action_invite_friends"-->
+    <!--app:showAsAction="always"/>-->
 </menu>
