перенос классов квартир и пользователя

--- a/app/src/main/res/layout/layout_user_status_info.xml
+++ b/app/src/main/res/layout/layout_user_status_info.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="agUser"
-            type="ru.mos.elk.profile.AgUser" />
+            type="ru.mos.polls.profile.model.AgUser" />
     </data>
 
     <LinearLayout
