--- a/app/src/main/res/layout/fragment_user_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_user_tab_profile.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="agUser"
-            type="ru.mos.elk.profile.AgUser"/>
+            type="ru.mos.polls.profile.model.AgUser"/>
 
         <variable
             name="clickListener"
