--- a/app/src/main/res/layout/layout_badge.xml
+++ b/app/src/main/res/layout/layout_badge.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.elk.profile.Achievements" />
+            type="ru.mos.polls.profile.model.Achievements" />
 
     </data>
 
