--- a/app/src/main/res/layout/fragment_our_apps.xml
+++ b/app/src/main/res/layout/fragment_our_apps.xml
@@ -3,20 +3,31 @@
 
     <RelativeLayout style="@style/root">
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/ptrLayout"
-            style="@style/root"
-            android:layout_alignParentTop="true">
-
-            <ListView
-                android:id="@android:id/list"
+        <RelativeLayout
+            android:id="@+id/root"
+            style="@style/root">
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipe"
                 style="@style/root"
-                android:drawSelectorOnTop="false" />
-        </android.support.v4.widget.SwipeRefreshLayout>
+                android:layout_alignParentTop="true">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/list"
+                    style="@style/root"
+                    android:drawSelectorOnTop="false" />
+            </android.support.v4.widget.SwipeRefreshLayout>
+        </RelativeLayout>
 
         <TextView
             android:id="@android:id/empty"
+            android:visibility="gone"
             style="@style/emptylist" />
+
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@style/item"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
 
         <include layout="@layout/layout_internet_connection_lost" />
     </RelativeLayout>
