переписан UserInfoAdapter в InfoTabFragment

--- a/app/src/main/res/layout/user_info_item.xml
+++ b/app/src/main/res/layout/user_info_item.xml
@@ -9,6 +9,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/root"
         style="@style/item"
         android:orientation="vertical"
         android:padding="@dimen/pd_xsmall">
