--- a/app/src/main/res/layout/activity_subscribe.xml
+++ b/app/src/main/res/layout/activity_subscribe.xml
@@ -61,6 +61,13 @@
 
                     <include layout="@layout/layout_subscribe_news"/>
                 </LinearLayout>
+
+                <!--Электронный дом-->
+                <LinearLayout
+                    style="@style/polls_subscibe_layout">
+
+                    <include layout="@layout/layout_subscribe_oss"/>
+                </LinearLayout>
                 <!--Кнопка сохранить-->
                 <View
                     style="@style/not_used"/>
