--- a/app/src/main/res/layout/fragment_changepassword.xml
+++ b/app/src/main/res/layout/fragment_changepassword.xml
@@ -23,8 +23,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/oldpass"
                     style="@style/edit_profile.input"
-                    android:hint="Текущий пароль"
-                    android:inputType="textCapSentences" />
+                    android:hint="Текущий пароль" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -35,8 +34,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/newpass"
                     style="@style/edit_profile.input"
-                    android:hint="Новый пароль"
-                    android:inputType="textCapSentences" />
+                    android:hint="Новый пароль" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -47,8 +45,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/repeatpass"
                     style="@style/edit_profile.input"
-                    android:hint="Повтор нового пароля"
-                    android:inputType="textCapSentences" />
+                    android:hint="Повтор нового пароля" />
 
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
