--- a/app/src/main/res/layout/fragment_changepassword.xml
+++ b/app/src/main/res/layout/fragment_changepassword.xml
@@ -22,8 +22,8 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/oldpass"
-                    style="@style/edit_profile.input"
-                    android:hint="Текущий пароль" />
+                    style="@style/input.password"
+                    android:hint="Текущий пароль"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -33,8 +33,9 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/newpass"
-                    style="@style/edit_profile.input"
-                    android:hint="Новый пароль" />
+                    style="@style/input.password"
+                    android:hint="Новый пароль"
+                    android:inputType="textPassword"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -44,8 +45,9 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/repeatpass"
-                    style="@style/edit_profile.input"
-                    android:hint="Повтор нового пароля" />
+                    style="@style/input.password"
+                    android:hint="Повтор нового пароля"
+                    android:inputType="textPassword"/>
 
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
