--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout style="@style/linear"
-                xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
-        android:id="@+id/root"
+        android:id="@+id/relativeView"
         style="@style/root">
+
         <ProgressBar
-            android:id="@+id/loading"
+            android:id="@+id/progress"
             style="@style/progressbar"
             android:layout_alignParentRight="false"
             android:layout_centerInParent="true"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
-        <WebView
-            android:id="@+id/webView"
-            style="@style/root"/>
+        <RelativeLayout
+            android:id="@+id/root"
+            style="@style/root">
+
+            <WebView
+                android:id="@+id/webView"
+                style="@style/root" />
+        </RelativeLayout>
+
+        <include layout="@layout/layout_internet_connection_lost" />
+
     </RelativeLayout>
-    <include layout="@layout/layout_internet_connection_lost"/>
-</RelativeLayout>
+</layout>
