--- a/app/src/main/res/layout/item_bind_social_new.xml
+++ b/app/src/main/res/layout/item_bind_social_new.xml
@@ -11,6 +11,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/root"
         style="@style/item.linear.horizontal"
         android:padding="@dimen/pd_xsmall">
 
