--- a/app/src/main/res/layout/fragment_survey_summary.xml
+++ b/app/src/main/res/layout/fragment_survey_summary.xml
@@ -1,61 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/item">
-    <!--фон-->
-    <View
-        android:id="@+id/stub"
-        style="@style/root"
-        android:background="@drawable/ag_back" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ScrollView
-        android:id="@+id/baseContainer"
-        style="@style/root"
-        android:layout_above="@+id/shareButton"
-        android:layout_below="@id/progressView">
+    <RelativeLayout style="@style/item">
+        <!--фон-->
+        <View
+            android:id="@+id/stub"
+            style="@style/root"
+            android:background="@drawable/ag_back" />
 
-        <LinearLayout style="@style/item.linear">
-            <!--хедр опроса-->
-            <LinearLayout
-                android:id="@+id/topContainer"
-                style="@style/item.linear">
+        <ScrollView
+            android:id="@+id/baseContainer"
+            style="@style/root"
+            android:layout_above="@+id/shareButton"
+            android:layout_below="@id/progressView">
 
-                <ru.mos.polls.survey.summary.SurveyHeader
-                    android:id="@+id/header"
-                    style="@style/item"
-                    android:paddingBottom="@dimen/pd_xsmall" />
+            <LinearLayout style="@style/item.linear">
+                <!--хедр опроса-->
+                <LinearLayout
+                    android:id="@+id/topContainer"
+                    style="@style/item.linear">
 
-                <ru.mos.polls.survey.summary.ExpertsView
-                    android:id="@+id/experts"
-                    style="@style/item"
-                    android:gravity="center_vertical" />
+                    <ru.mos.polls.survey.summary.SurveyHeader
+                        android:id="@+id/header"
+                        style="@style/item"
+                        android:paddingBottom="@dimen/pd_xsmall" />
 
-                <ru.mos.polls.common.view.VotersView
-                    android:id="@+id/votesInfo"
-                    style="@style/item"
-                    android:padding="@dimen/pd_xsmall" />
+                    <ru.mos.polls.survey.summary.ExpertsView
+                        android:id="@+id/experts"
+                        style="@style/item"
+                        android:gravity="center_vertical" />
+
+                    <ru.mos.polls.common.view.VotersView
+                        android:id="@+id/votesInfo"
+                        style="@style/item"
+                        android:padding="@dimen/pd_xsmall" />
+                </LinearLayout>
+                <!--Список вопросов-->
+                <ru.mos.polls.survey.summary.QuestionsView
+                    android:id="@+id/questionsView"
+                    style="@style/root"
+                    android:layout_marginBottom="@dimen/pd_xsmall"
+                    android:padding="@dimen/pd_xxsmall"
+                    app:drawableAnswered="@drawable/circle_fill"
+                    app:drawablePassed="@drawable/circle_none" />
             </LinearLayout>
-            <!--Список вопросов-->
-            <ru.mos.polls.survey.summary.QuestionsView
-                android:id="@+id/questionsView"
-                style="@style/root"
-                android:layout_marginBottom="@dimen/pd_xsmall"
-                android:padding="@dimen/pd_xxsmall"
-                app:drawableAnswered="@drawable/circle_fill"
-                app:drawablePassed="@drawable/circle_none" />
-        </LinearLayout>
-    </ScrollView>
+        </ScrollView>
 
-    <Button
-        android:id="@+id/shareButton"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/vs_xxsmall"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/poll_navigation_green_selector"
-        android:gravity="center"
-        android:text="@string/share"
-        android:textAllCaps="true"
-        android:textColor="@color/white"
-        android:textSize="@dimen/ts_normal"
-        android:visibility="gone" />
-</RelativeLayout>
+        <Button
+            android:id="@+id/shareButton"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/vs_xxsmall"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/poll_navigation_green_selector"
+            android:gravity="center"
+            android:text="@string/share"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="@dimen/ts_normal"
+            android:visibility="gone" />
+    </RelativeLayout>
+</layout>
