--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -1,48 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout style="@style/linear"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ru.mos.polls.survey.summary.ProgressView
-        android:id="@+id/progressView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/buttonContainer"
-        android:layout_gravity="center"
-        android:background="@color/progress_panel"
-        app:drawableEmpty="@drawable/circle_none"
-        app:drawableMarker="@drawable/circle_fill_selected"
-        app:drawableProgress="@drawable/circle_fill"/>
+    <RelativeLayout style="@style/linear">
 
-    <!--Заглушка при отсутсвии интернета -->
-    <ScrollView
-        android:id="@+id/stubOffline"
-        style="@style/root"
-        android:visibility="gone">
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@style/item"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
 
-        <LinearLayout
-            style="@style/item.linear"
-            android:layout_gravity="center">
+        <RelativeLayout
+            android:id="@+id/root"
+            style="@style/root">
 
-            <Button
-                android:id="@+id/refreshSurvey"
-                style="@style/button.centered"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="@dimen/pd_xxsmall"
-                android:text="@string/refresh"/>
-        </LinearLayout>
-    </ScrollView>
+            <ru.mos.polls.survey.summary.ProgressView
+                android:id="@+id/progressView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/buttonContainer"
+                android:layout_gravity="center"
+                android:background="@color/progress_panel"
+                app:drawableEmpty="@drawable/circle_none"
+                app:drawableMarker="@drawable/circle_fill_selected"
+                app:drawableProgress="@drawable/circle_fill" />
 
-    <FrameLayout
-        android:id="@+id/questionContainer"
-        style="@style/root"
-        android:layout_above="@+id/progressView"/>
+            <!--Заглушка при отсутсвии интернета -->
+            <ScrollView
+                android:id="@+id/stubOffline"
+                style="@style/root"
+                android:visibility="gone">
 
-    <ru.mos.polls.survey.SurveyButtons
-        android:id="@+id/buttonContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-</RelativeLayout>
+                <LinearLayout
+                    style="@style/item.linear"
+                    android:layout_gravity="center">
+
+                    <Button
+                        android:id="@+id/refreshSurvey"
+                        style="@style/button.centered"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="@dimen/pd_xxsmall"
+                        android:text="@string/refresh" />
+                </LinearLayout>
+            </ScrollView>
+
+            <FrameLayout
+                android:id="@+id/questionContainer"
+                style="@style/root"
+                android:layout_above="@+id/progressView" />
+
+            <ru.mos.polls.survey.SurveyButtons
+                android:id="@+id/buttonContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+        </RelativeLayout>
+    </RelativeLayout>
+</layout>
