AG-2782 расчет к суммы СНИЛС

--- a/app/src/main/res/layout/fragment_pgu_bind.xml
+++ b/app/src/main/res/layout/fragment_pgu_bind.xml
@@ -32,10 +32,7 @@
                     <ru.mos.polls.maskedettext.MaskedEditText
                         android:id="@+id/etLogin"
                         style="@style/input"
-                        android:hint="@string/pgu_hint_email"
-                        android:imeOptions="actionNext"
-                        app:char_representation="#"
-                        app:mask_fill="" />
+                        android:hint="@string/pgu_hint_email" />
                     <!--<android.support.design.widget.TextInputEditText-->
                     <!--android:id="@+id/etLogin"-->
                     <!--style="@style/input.email"-->
