--- a/app/src/main/res/layout/fragment_pgu_bind.xml
+++ b/app/src/main/res/layout/fragment_pgu_bind.xml
@@ -32,13 +32,8 @@
                     <ru.mos.polls.maskedettext.MaskedEditText
                         android:id="@+id/etLogin"
                         style="@style/input"
-                        android:hint="@string/pgu_hint_email" />
-                    <!--<android.support.design.widget.TextInputEditText-->
-                    <!--android:id="@+id/etLogin"-->
-                    <!--style="@style/input.email"-->
-                    <!--android:hint="@string/pgu_hint_email"-->
-                    <!--android:imeOptions="actionNext"/>-->
-
+                        android:hint="@string/pgu_hint_email"
+                        app:char_representation="#" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
