--- a/app/src/main/res/layout/layout_support.xml
+++ b/app/src/main/res/layout/layout_support.xml
@@ -58,7 +58,7 @@
                         android:id="@+id/orderNumberLayout"
                         style="@style/item.linear"
                         android:paddingTop="@dimen/pd_normal"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
                         <TextView
                             android:id="@+id/orderNumberTitle"
