--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         style="@style/root"
@@ -45,9 +46,9 @@
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
-                        android:visibility="gone"
                         android:id="@+id/orderNumber_feedback_wraper"
-                        style="@style/text_input_layout">
+                        style="@style/text_input_layout"
+                        android:visibility="gone">
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/orderNumber_feedback"
@@ -69,8 +70,9 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/list"
-                        style="@style/root"
-                        android:paddingTop="@dimen/pd_small" />
+                        style="@style/item"
+                        android:paddingTop="@dimen/pd_small"
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                 </LinearLayout>
             </android.support.v4.widget.NestedScrollView>
 
